--- a/index.html
+++ b/index.html
@@ -1,17 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+  <title>Aloysnotes</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+  <meta name="viewport" content="initial-scale=1, minimum-scale=1, width=device-width" />
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <link href="/s/styles.css" rel="stylesheet" type="text/css" />
+  <link href="/s/styles-homepage.css" rel="stylesheet" type="text/css">
+  <script src="/s/viewer.js" type="text/javascript"></script>
   </head>
   <body>
-    <main>
-        <p>Welcome to AloysNotes</p>  
-    </main>
-	<script src="index.js"></script>
+  <div class="homepage" style="height:100%;background-color:white;" id="homepage">	
+  <div id="skel-layers-wrapper" style="transition:transform 0.5s, opacity 0.5s; left: 0px; top: -100px; right: 0px; position: relative; backface-visibility: hidden;">
+  <div id="header-wrapper">
+  <div class="container" id="links" style="color:#555555">
+  <h2>AloysNotes</h2>  
+  <h2 style="color:#9999FF;font-size:34px !important;">Practice papers for Aloys</h2><br />
+  <span><img src="/s/images/icon_back.png">&nbsp;&nbsp;
+  <a href="../">Back</a><br />
+  <span><img src="/s/images/icon_folder.png">&nbsp;&nbsp;
+  <a href="yr9/">Year 9</a><br />
+  <span><img src="/s/images/icon_folder.png">&nbsp;&nbsp;
+  <a href="yr10/">Year 10</a></span><br />
+  <span><img src="/s/images/icon_folder.png">&nbsp;&nbsp;
+  <a href="yr11/">Year 11 - Preliminary</a></span><br />
+  <span><img src="/s/images/icon_folder.png">&nbsp;&nbsp;
+  <a href="yr12/">Year 12 - HSC</a></span><br />
+  <br /> 
+  <span><img src="/s/images/icon_info.png">&nbsp;&nbsp;
+  <a href="about.html">About Aloysnotes</a></span><br />
+  
+  
+  </div>
+</section></div></div></div>
   </body>
-</html>
+  </html>
