--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
   <meta name="viewport" content="initial-scale=1, minimum-scale=1, width=device-width" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <link href="/s/styles.css" rel="stylesheet" type="text/css" />
-  <link href="/s/styles-homepage.css" rel="stylesheet" type="text/css">
-  <script src="/s/viewer.js" type="text/javascript"></script>
+  <link href="/home/styles.css" rel="stylesheet" type="text/css" />
+  <link href="/home/styles-homepage.css" rel="stylesheet" type="text/css">
+  <script src="/home/viewer.js" type="text/javascript"></script>
   </head>
   <body>
     <div class="homepage" style="height:100%;background-color:white;" id="homepage">	
