--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
   <meta name="viewport" content="initial-scale=1, minimum-scale=1, width=device-width" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <link href="/home/styles.css" rel="stylesheet" type="text/css" />
-  <link href="/home/styles-homepage.css" rel="stylesheet" type="text/css">
-  <script src="/home/viewer.js" type="text/javascript"></script>
+  <link href="styles.css" rel="stylesheet" type="text/css" />
+  <link href="styles-homepage.css" rel="stylesheet" type="text/css">
+  <script src="viewer.js" type="text/javascript"></script>
   </head>
   <body>
     <div class="homepage" style="height:100%;background-color:white;" id="homepage">	
@@ -15,15 +15,15 @@
     <div id="header-wrapper">
     <div class="container" id="links" style="color:#555555">
     <h2>AloysNotes</h2>  
-    <h2 style="color:#9999FF;font-size:34px !important;">Practice papers for Aloys</h2><br />
-    <span><img src="/s/images/icon_folder.png">&nbsp;&nbsp;
-    <a href="yr9/">Year 9</a><br />
-    <span><img src="/s/images/icon_folder.png">&nbsp;&nbsp;
-    <a href="yr10/">Year 10</a></span><br />
-    <span><img src="/s/images/icon_folder.png">&nbsp;&nbsp;
-    <a href="yr11/">Year 11 - Preliminary</a></span><br />
-    <span><img src="/s/images/icon_folder.png">&nbsp;&nbsp;
-    <a href="yr12/">Year 12 - HSC</a></span><br />
+    <h2 style="color:#002efc;font-size:34px !important;">Practice papers and notes for Aloys</h2><br />
+    <span><img src="imagefiles/icon_folder.png" width="10" height="10">&nbsp;&nbsp;
+    <a href="yr9.html">Year 9</a><br />
+    <span><img src="imagefiles/icon_folder.png" width="10" height="10">&nbsp;&nbsp;
+    <a href="yr10.html">Year 10</a></span><br />
+    <span><img src="imagefiles/icon_folder.png" width="10" height="10">&nbsp;&nbsp;
+    <a href="yr11.html">Year 11 - Preliminary</a></span><br />
+    <span><img src="imagefiles/icon_folder.png" width="10" height="10">&nbsp;&nbsp; 
+    <a href="yr12.html">Year 12 - HSC</a></span><br />
     <br /> 
     <span><img src="/s/images/icon_info.png">&nbsp;&nbsp;
    <a href="about.html">About Aloysnotes</a></span><br />
