--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
     <div class="container" id="links" style="color:#555555">
     <h2>AloysNotes</h2>  
     <h2 style="color:#002efc;font-size:34px !important;">Practice papers and notes for Aloys</h2><br />
-    <span><img src="imagefiles/icon_folder.png" width="10" height="10">&nbsp;&nbsp;
+    <span><img src="imagefiles/icon_folder.png" width="15" height="15">&nbsp;&nbsp;
     <a href="yr9.html">Year 9</a><br />
-    <span><img src="imagefiles/icon_folder.png" width="10" height="10">&nbsp;&nbsp;
+    <span><img src="imagefiles/icon_folder.png" width="15" height="15">&nbsp;&nbsp;
     <a href="yr10.html">Year 10</a></span><br />
-    <span><img src="imagefiles/icon_folder.png" width="10" height="10">&nbsp;&nbsp;
+    <span><img src="imagefiles/icon_folder.png" width="15" height="15">&nbsp;&nbsp;
     <a href="yr11.html">Year 11 - Preliminary</a></span><br />
-    <span><img src="imagefiles/icon_folder.png" width="10" height="10">&nbsp;&nbsp; 
+    <span><img src="imagefiles/icon_folder.png" width="15" height="15">&nbsp;&nbsp; 
     <a href="yr12.html">Year 12 - HSC</a></span><br />
     <br /> 
-    <span><img src="/s/images/icon_info.png">&nbsp;&nbsp;
+    <span><img src="imagefiles/icon_info.png" width="15" height="15">&nbsp;&nbsp;
    <a href="about.html">About Aloysnotes</a></span><br />
   
   
