--- a/yr11.html
+++ b/yr11.html
@@ -22,7 +22,7 @@
 <div id="folder-tree">
 <a href="index.html">AloysNotes &#8594;</a>&nbsp;
 <a class="current" href="yr11.html">Year 11 - Preliminary &#8594;</a>&nbsp;
-<a class="reverse" href="../">&#8598; [<i>Up One Folder</i>]</a>
+<a class="reverse" href="index.html">&#8598; [<i>Up One Folder</i>]</a>
 </div></div>      
 <div id="content-all">
 <h3><span class="title">Year 11 Resources</span></h3>
@@ -47,8 +47,8 @@
 <div id="web-list" style="display: none;">
 <div><div><div>
 <div class="smallscreen" style="display:none;">
-<img src="/s/images/icon_home.png" />&nbsp;&nbsp;
-<a href="/s/">Home Page</a><br /><br />
+<img src="imagefiles/icon_home.png" />&nbsp;&nbsp;
+<a href="index.html">Home Page</a><br /><br />
 </div>
 <img src="/s/images/colours/icon_purple.png" />&nbsp;&nbsp;
 <a href="Biology/">Biology</a><br />
