--- a/yr12.html
+++ b/yr12.html
@@ -2,27 +2,27 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html lang="en" xml:lang="en">
 <head>
-<title>THSC Online - HSC Resources</title>
+<title>AloysNotes - HSC Resources</title>
 <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 <meta name="viewport" content="initial-scale=1, minimum-scale=1, width=device-width" />
-<meta http-equiv="content-type" content="text/html; charset=utf-8" /><link href="/s/styles.css" rel="stylesheet" type="text/css" />
-<script src="/s/viewer.js" type="text/javascript"></script>
+<meta http-equiv="content-type" content="text/html; charset=utf-8" /><link href="styles.css" rel="stylesheet" type="text/css" />
+<script src="viewer.js" type="text/javascript"></script>
 </head><body>
-<h1>thsconline</h1>    
+<h1>AloysNotes</h1>    
 <div id="page-wrapper">
 <div id="navigation">
 <ul>
-<li class="element"><a href="/s/">THSC Home</a></li>
-<li class="element reducible"><a href="/s/yr9/">Year 9</a></li>
-<li class="element"><a href="/s/yr10/">Year 10</a></li>
-<li class="element"><a href="/s/yr11/">Year 11 - Preliminary</a></li>
-<li class="current"><a href="/s/yr12/">Year 12 - HSC</a></li>
+<li class="element"><a href="index.html">AloysNotes Home</a></li>
+<li class="element reducible"><a href="yr9.html">Year 9</a></li>
+<li class="element"><a href="yr10.html">Year 10</a></li>
+<li class="element"><a href="yr11.html">Year 11 - Preliminary</a></li>
+<li class="current"><a href="yr12.html">Year 12 - HSC</a></li>
 <li class="element reducible"><a href="/s/upload/">Upload Files</a></li>
 </ul>
 <div id="folder-tree">
-<a href="/s/">thsconline &#8594;</a>&nbsp;
-<a class="current" href="/s/yr12/">Year 12 - HSC &#8594;</a>&nbsp;
-<a class="reverse" href="../">&#8598; [<i>Up One Folder</i>]</a>
+<a href="index.html">thsconline &#8594;</a>&nbsp;
+<a class="current" href="yr12.html">Year 12 - HSC &#8594;</a>&nbsp;
+<a class="reverse" href="index.html">&#8598; [<i>Up One Folder</i>]</a>
 </div></div>      
 <div id="content-all">
 <h3><span class="title">HSC Resources</span></h3>
@@ -64,8 +64,8 @@
 <div id="web-list" style="display: none;">
 <div><div><div>
 <div class="smallscreen" style="display:none;">
-<img src="/s/images/icon_home.png" />&nbsp;&nbsp;
-<a href="/s/">Home Page</a><br /><br />
+<img src="imagefiles/icon_home.png" />&nbsp;&nbsp;
+<a href="index.html">Home Page</a><br /><br />
 </div>
 <img src="/s/images/colours/icon_aqua.png" />&nbsp;&nbsp;
 <a href="Agriculture/">Agriculture</a><br />
