--- a/yr10.html
+++ b/yr10.html
@@ -17,7 +17,7 @@
 <li class="current"><a href="yr10.html">Year 10</a></li>
 <li class="element"><a href="yr11.html">Year 11 - Preliminary</a></li>
 <li class="element"><a href="yr12.html">Year 12 - HSC</a></li>
-<li class="element reducible"><a href="/s/upload/">Upload Files</a></li>
+<li class="element reducible"><a href="upload.html">Upload Files</a></li>
 </ul>
 <div id="folder-tree">
 <a href="index.html">AloysNotes &#8594;</a>&nbsp;
