--- a/yr11.html
+++ b/yr11.html
@@ -17,7 +17,7 @@
 <li class="element"><a href="yr10.html">Year 10</a></li>
 <li class="current"><a href="yr11.html">Year 11 - Preliminary</a></li>
 <li class="element"><a href="yr12.html">Year 12 - HSC</a></li>
-<li class="element reducible"><a href="/s/upload/">Upload Files</a></li>
+<li class="element reducible"><a href="upload.html">Upload Files</a></li>
 </ul>
 <div id="folder-tree">
 <a href="index.html">AloysNotes &#8594;</a>&nbsp;
@@ -30,7 +30,7 @@
 <div><div>
 
 <div><a href="Biology/"><span><img src="/s/images/colours/icon_purple.png" /><span style="bottom: 5px; height: 21px;">&nbsp;&nbsp; Biology</span></span></a></div>
-<div><a href="Business Studies/"><span><img src="/s/images/colours/icon_green.png" /><span style="bottom: 5px; height: 21px;">&nbsp;&nbsp; Business Studies</span></span></a></div>
+<div><a href="BusinessStudies11.html"><span><img src="/s/images/colours/icon_green.png" /><span style="bottom: 5px; height: 21px;">&nbsp;&nbsp; Business Studies</span></span></a></div>
 <div><a href="Chemistry/"><span><img src="/s/images/colours/icon_purple.png" /><span style="bottom: 5px; height: 21px;">&nbsp;&nbsp; Chemistry</span></span></a></div>
 <div><a href="Earth &amp; Environmental Science/"><span><img src="/s/images/colours/icon_purple.png" /><span style="bottom: 5px; height: 42px;">&nbsp;&nbsp; Earth &amp;<br />&nbsp;&nbsp; Environment Science</span></span></a></div>
 <div><a href="Economics/"><span><img src="/s/images/colours/icon_green.png" /><span style="bottom: 5px; height: 21px;">&nbsp;&nbsp; Economics</span></span></a></div>
