--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h2>AloysNotes</h2>  
     <h2 style="color:#002efc;font-size:34px !important;">Practice papers and notes for Aloys</h2><br />
     <span><img src="imagefiles/icon_folder.png" width="15" height="15">&nbsp;&nbsp;
-    <a href="yr9.html">Year 9</a><br />
+    <a href="yr9/yr9.html">Year 9</a><br />
     <span><img src="imagefiles/icon_folder.png" width="15" height="15">&nbsp;&nbsp;
     <a href="yr10.html">Year 10</a></span><br />
     <span><img src="imagefiles/icon_folder.png" width="15" height="15">&nbsp;&nbsp;
