--- a/upload.html
+++ b/upload.html
@@ -33,7 +33,7 @@
 <a href="index.html">Home Page</a></span><br />
 <br />
 </div>
-All submissions of past papers or practice questions (TEX/PDF files preferred) are welcome.<br /><br />
+All submissions of past papers or practice questions (TEXT/PDF files preferred) are welcome.<br /><br />
 <!--<a href="uploader.html">Upload Files here</a><br /><br />-->
 <a href="https://docs.google.com/forms/d/e/1FAIpQLSdvUNKUsrj_1GRCvu7izKoTQJOck57HAfCY62cbSnPTDiYm7A/viewform">Upload Files Here</a>
 
