--- a/yr10.html
+++ b/yr10.html
@@ -6,7 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 <meta name="viewport" content="initial-scale=1, minimum-scale=1, width=device-width" />
 <meta http-equiv="content-type" content="text/html; charset=utf-8" /><link href="styles.css" rel="stylesheet" type="text/css" />
-<script src="/home/viewer.js" type="text/javascript"></script>
+<script src="viewer.js" type="text/javascript"></script>
 </head><body>
 <h1>AloysNotes</h1>    
 <div id="page-wrapper">
