--- a/yr10.html
+++ b/yr10.html
@@ -12,7 +12,7 @@
 <div id="page-wrapper">
 <div id="navigation">
 <ul>
-<li class="element"><a href="index.html">THSC Home</a></li>
+<li class="element"><a href="index.html">AloysNotes Home</a></li>
 <li class="element reducible"><a href="yr9.html">Year 9</a></li>
 <li class="current"><a href="yr10.html">Year 10</a></li>
 <li class="element"><a href="yr11.html">Year 11 - Preliminary</a></li>
